--- a/pages/problems/拦截导弹.md
+++ b/pages/problems/拦截导弹.md
@@ -82,7 +82,7 @@ $Dilworth$ 定理
 - 如果 $b_i> l_{r_1}$，说明若放入 b~i~ 则 $l$ 会无序，所以要找办法把 $b_i$ 放进去：
 
 怎么放呢？在 $l$ 中找到第一个小于 $b_i$ 的数，用 $b_i$ 代替它。
-**找到第一个小于 b~i~ 的数，使用 `upper_bound` 可以在$\mathcal O(n\log n)$复杂度内找到（需要改比较器）。**
+**找到第一个小于 $b_i$ 的数，使用 `upper_bound` 可以在$\mathcal O(n\log n)$复杂度内找到（需要改比较器）。**
 
 由于它返回的是指针就可以有一些奇特操作。
 
