--- a/pages/problems/解题笔记.md
+++ b/pages/problems/解题笔记.md
@@ -13,15 +13,15 @@ date: 2025-01-20 18:31:30
 
 #### 题目描述
 
-某条街被划为 n 条路段，这 n 条路段依次编号为 1…n。每个路段最多可以种一棵树。现在居民们给出了 h 组建议，每组建议包含三个整数 b,e,t，表示居民希望在路段 b 到 e之间至少要种 t 棵树。这些建议所给路段的区间可以交叉。请问：如果要满足所有居民的建议，至少要种多少棵树。
+某条街被划为 $n$ 条路段，这 $n$ 条路段依次编号为 $1\cdots n$。每个路段最多可以种一棵树。现在居民们给出了 $h$ 组建议，每组建议包含三个整数 $b,e,t$，表示居民希望在路段 $b$ 到 $e$ 之间至少要种 $t$ 棵树。这些建议所给路段的区间可以交叉。请问：如果要满足所有居民的建议，至少要种多少棵树。
 
 #### 输入格式
 
-第一行为 n，表示路段数。
+第一行为 $n$，表示路段数。
 
-第二行为 h，表示建议数。
+第二行为 $h$，表示建议数。
 
-下面 h 行描述一条建议：b,e,t，用一个空格分隔。
+下面 $h$ 行描述一条建议：$b,e,t$ ，用一个空格分隔。
 
 #### 输出格式
 
@@ -89,24 +89,24 @@ void solve()
 
 #### 题目描述
 
-有$N$堆纸牌，编号分别为$1,2,\ldots,N$。每堆上有若干张，但纸牌总数必为$N$的倍数。可以在任一堆上取若干张纸牌，然后移动。
+有 $N$ 堆纸牌，编号分别为 $1,2,\ldots,N$ 。每堆上有若干张，但纸牌总数必为 $N$ 的倍数。可以在任一堆上取若干张纸牌，然后移动。
 
-移牌规则为：在编号为$1$堆上取的纸牌，只能移到编号为$2$的堆上；在编号为$N$的堆上取的纸牌，只能移到编号为$N-1$的堆上；其他堆上取的纸牌，可以移到相邻左边或右边的堆上。
+移牌规则为：在编号为$1$堆上取的纸牌，只能移到编号为 $2$ 的堆上；在编号为 $N$ 的堆上取的纸牌，只能移到编号为 $N-1$ 的堆上；其他堆上取的纸牌，可以移到相邻左边或右边的堆上。
 
 现在要求找出一种移动方法，用最少的移动次数使每堆上纸牌数都一样多。
 
-例如$N=4$时，$4$堆纸牌数分别为$9,8,17,6$。
+例如 $N=4$ 时，$4$ 堆纸牌数分别为 $9,8,17,6$。
 
-移动$3$次可达到目的：
+移动 $3$ 次可达到目的：
 
-- 从第三堆取$4$张牌放到第四堆，此时每堆纸牌数分别为$9,8,13,10$。
-- 从第三堆取$3$张牌放到第二堆，此时每堆纸牌数分别为$9,11,10,10$。
-- 从第二堆取$1$张牌放到第一堆，此时每堆纸牌数分别为 $10,10,10,10$。
+- 从第三堆取 $4$ 张牌放到第四堆，此时每堆纸牌数分别为 $9,8,13,10$。
+- 从第三堆取 $3$ 张牌放到第二堆，此时每堆纸牌数分别为 $9,11,10,10$。
+- 从第二堆取 $1$ 张牌放到第一堆，此时每堆纸牌数分别为 $10,10,10,10$。
 
 #### 输入格式
 
-第一行共一个整数$N$，表示纸牌堆数。  
-第二行共$N$个整数$A_1,A_2,\ldots,A_N$，表示每堆纸牌初始时的纸牌数。
+第一行共一个整数 $N$，表示纸牌堆数。  
+第二行共 $N$ 个整数 $A_1,A_2,\ldots,A_N$ ，表示每堆纸牌初始时的纸牌数。
 
 #### 输出格式
 
@@ -125,7 +125,7 @@ void solve()
 
 #### 提示
 
-对于$100\%$的数据，$1  \le  N  \le  100$，$1 \le  A_i  \le 10000$。
+对于 $100\%$ 的数据，$1  \le  N  \le  100$，$1 \le  A_i  \le 10000$。
 
 #### 思路
 
@@ -162,7 +162,7 @@ void solve()
 
 #### 输入格式
 
-**输入若干组数据**.每组数据包括:导弹总个数(正整数),导弹依此飞来的高度(雷达给出的高度数据是不大于30000的正整数,用空格分隔)
+**输入若干组数据**.每组数据包括:导弹总个数(正整数),导弹依此飞来的高度(雷达给出的高度数据是不大于 $30000$ 的正整数,用空格分隔)
 
 #### 输出格式
 
@@ -275,9 +275,9 @@ $n$位同学站成一排，音乐老师要请其中的$n-k$位同学出列，使
 
 #### 提示
 
-对于$50\%$的数据，保证有$n \le 20$。
+对于 $50\%$ 的数据，保证有 $n \le 20$。
 
-对于全部的数据，保证有$n \le 100$。
+对于全部的数据，保证有 $n \le 100$。
 
 #### 思路
 
@@ -290,9 +290,9 @@ g[i]   3 3 2 3 2 1 1 1
 f+g-1  3 3 2 4 3 1 3 4
 ```
 
-f[i] + g[i] - 1即为以 v[i] 为中心，能满足题目条件的最长序列长度。
+$f[i] + g[i] - 1$即为以 $v[i]$ 为中心，能满足题目条件的最长序列长度。
 
-因此，遍历一次，找到最大值 mx ，n - mx 为所求。
+因此，遍历一次，找到最大值 $mx$ ，$n - mx$ 为所求。
 
 #### CODE
 
@@ -441,24 +441,27 @@ void solve()
 
 #### 题目描述
 
-对于一个正整数$n$和一个非负整数$d$，定义$f_d(n)$为$n$的所有约数的$d$次方之和。如$f_3(10) = 1^3 + 2^3 + 5^3 + 10^3$。  
+对于一个正整数$n$和一个非负整数 $d$ ，定义 $f_d(n)$ 为 $n$ 的所有约数的 $d$ 次方之和。如 $f_3(10) = 1^3 + 2^3 + 5^3 + 10^3$。  
 
-现给定$n, d$，求$f_d(n)$的值。由于答案可能很大，输出答案对$10^9 + 7$取模的结果。
+现给定 $n, d$ ，求 $f_d(n)$ 的值。由于答案可能很大，输出答案对 $10^9 + 7$ 取模的结果。
 
 #### 输入格式
 
-由于$n$可能很大，所以给出$n$的质因数分解式。  
+由于 $n$ 可能很大，所以给出$n$的质因数分解式。  
+
 $n = \prod_{i = 1}^w p_i^{a_i}$ 
 
-第一行输入一个正整数$w$和一个非负整数$d$。  
-接下来$w$行，每行输入两个正整数$p_i, a_i$。  
-保证$p_i$为素数且互不相同。  
+第一行输入一个正整数 $w$ 和一个非负整数 $d$。
 
-对于全部的测试点，保证$1 \leq w \leq 10^5, 0 \leq d \leq 10^9, 2 \leq p_i \leq 10^9, 1 \leq a_i \leq 10^9$。
+接下来 $w$ 行，每行输入两个正整数 $p_i, a_i$。
+
+保证 $p_i$ 为素数且互不相同。  
+
+对于全部的测试点，保证 $1 \leq w \leq 10^5, 0 \leq d \leq 10^9, 2 \leq p_i \leq 10^9, 1 \leq a_i \leq 10^9$。
 
 #### 输出格式
 
-输出$f_d(n)$对$10^9 + 7$取模的结果。
+输出 $f_d(n)$ 对 $10^9 + 7$ 取模的结果。
 
 #### 样例
 
@@ -540,13 +543,13 @@ void solve()
 
 #### 题目描述
 
-嘤嘤有两个整数$l,r$，她想知道区间$[l,r]$所有整数的异或和是多少喵~。
+嘤嘤有两个整数 $l,r$ ，她想知道区间 $[l,r]$ 所有整数的异或和是多少喵~。
 
 #### 输入格式
 
-第一行输入一个正整数$T(1 \leq T \leq 2 \times 10^5)$，表示询问次数。  
+第一行输入一个正整数 $T(1 \leq T \leq 2 \times 10^5)$，表示询问次数。  
 
-接下来T行，每行输入两个正整数$l,r(1 \leq l \leq r \leq 10^{18})$表示询问。
+接下来T行，每行输入两个正整数 $l,r(1 \leq l \leq r \leq 10^{18})$ 表示询问。
 
 #### 输出格式
 
@@ -569,13 +572,13 @@ void solve()
 
 #### 思路
 
-由于异或的性质(同一个数异或两次为0)
+由于异或的性质(同一个数异或两次为 $0$ )
 
-因此$l\oplus (l+1)\oplus (l+2)\oplus···r = [1\oplus 2\oplus 3···(l-1)][1\oplus 2\oplus 3···r]$
+因此 $l\oplus (l+1)\oplus (l+2)\oplus···r = [1\oplus 2\oplus 3···(l-1)][1\oplus 2\oplus 3···r]$
 
-由此，问题转化为了求1到x的异或和。
+由此，问题转化为了求 $1$ 到 $x$ 的异或和。
 
-通过打表可观察到（第i行表示xorSum(1,i)）: 异或和四项为一个循环，分别是1, x + 1, 0, x
+通过打表可观察到（第 $i$ 行表示 $\oplus_{i=1}^{i}$）: 异或和四项为一个循环，分别是 $1$, $x + 1$, $0$, $x$
 
 ```
  1
@@ -650,14 +653,17 @@ void solve()
 
 #### 题目描述
 
-小 Bo 有 $n$ 个正整数 $a_1...a_n$ ，以及一个权值序列 $w_1...w_n$ ，现在他定义$f(l,r)=(\sum_{i=l}^{r}a_i)\times w_{r-l+1}$ 
-现在他想知道$\sum_{l=1}^{n}\sum_{r=l}^{n}f(l,r)$的值，需要你来帮帮他  
+小 Bo 有 $n$ 个正整数 $a_1...a_n$ ，以及一个权值序列 $w_1...w_n$ ，现在他定义 $f(l,r)=(\sum_{i=l}^{r}a_i)\times w_{r-l+1}$ 
+现在他想知道 $\sum\limits_{l=1}^{n}\sum\limits_{r=l}^{n}f(l,r)$ 的值，需要你来帮帮他 
+
 你只需要输出答案对 $10^9+7$ 取模后的值
 
 #### 输入格式
 
 第一行一个正整数 $n$  
+
 第二行 $n$ 个正整数 $a_1...a_n$  
+
 第三行 $n$ 个正整数 $w_1...w_n$ 
 
 #### 输出格式
@@ -678,13 +684,13 @@ void solve()
 
 #### 思路
 
-$\sum_{i=l}^{r}a_i$表示连续（r - l + 1 = k）项， 要求$\sum_{l=1}^{n}\sum_{r=l}^{n}f(l,r)$，可以发现，
+$\sum\limits_{i=l}^{r}a_i$表示连续（r - l + 1 = k）项， 要求$\sum_{l=1}^{n}\sum_{r=l}^{n}f(l,r)$，可以发现，
 
-当 k = 1 or k = n 时, 数组 a 每一项均只被计算了一次
+当 k = 1 || k = n 时, 数组 a 每一项均只被计算了一次
 
-当 k = 2 or k = n - 1 时, 数组 a 除了a[1] 和 a[n], 其余项又被多计算了一次
+当 k = 2 || k = n - 1 时, 数组 a 除了a[1] 和 a[n], 其余项又被多计算了一次
 
-当 k = 3 or k = n - 2 时, 数组 a 除了a[1] 、 a[2] 和 a[n - 1]、 a[n], 其余项又被多计算了一次
+当 k = 3 || k = n - 2 时, 数组 a 除了a[1] 、 a[2] 和 a[n - 1]、 a[n], 其余项又被多计算了一次
 
 因此，利用双指针，每次多加指针包含区间的和，乘以两边的权值。
 
@@ -802,13 +808,13 @@ void solve()
 
 **法一：【二分答案】**
 
-二分打败BOSS所需轮数，对于每次的check，判断每个技能能够使用多少次，伤害累加，若是超过BOSS的hp，则当前轮数可行。
+二分打败BOSS所需轮数，对于每次的check，判断每个技能能够使用多少次，伤害累加，若是超过 BOSS 的 hp，则当前轮数可行。
 
 **！！ 需注意的是：伤害值非常大 且 二分初始值很大 时候， 多个技能的伤害总和可能超过 long long 的范围，因此需要在遍历技能过程中判断当前敌人hp 是否已经小于等于0， 即 BOSS 已死。 ！！**
 
 **法二：【优先队列】**
 
-用优先队列pair装每个技能的编号和下次可使用的第x轮。
+用优先队列 pair 装每个技能的编号和下次可使用的第x轮。
 
 首先，将所有节能技能全都放在优先队列里面，此时设置的下次可使用的第x轮为1。
 
@@ -1034,7 +1040,7 @@ $1\leq a,b,c,temp,A\leq 1e5$
 
 **法一：贪心**
 
-将所有技能（包括不同蓄力时间的大招）全都塞到一个vector里，按照技能的性价比（$\frac{伤害}{释放时间}$）由大到小排序。
+将所有技能（包括不同蓄力时间的大招）全都塞到一个vector里，按照技能的性价比（$\frac{\text{伤害}{\text{释放时间}}$）由大到小排序。
 
 只要时间还够释放前面的技能就释放，不够了再看下一个技能。
 
