Add cover images to multiple posts and create a new post for SZTU_ACM training competition
- Added cover image to "Hello, Valaxy!" post.
- Updated cover images for several algorithm and data structure posts.
- Created a new post titled "SZTU_ACM新生夏令营第四次训练赛" with detailed problem solutions and code examples.

--- a/pages/posts/算法与数据结构/4+ 高阶数据结构.md
+++ b/pages/posts/算法与数据结构/4+ 高阶数据结构.md
@@ -1,7 +1,7 @@
 ---
 title: 4+ 高阶数据结构
 math: true
-cover: https://img.tg/image/OfdZzL
+cover: https://ooo.0x0.ooo/2025/08/22/OfdSUM.png
 tag: 树分治 点分树 树链剖分 可持久化数据结构
 categories: 算法与数据结构
 date: 2025-08-18
