--- a/pages/posts/线性代数/矩阵.md
+++ b/pages/posts/线性代数/矩阵.md
@@ -5,7 +5,7 @@ tags:
   - 线性代数
 categories:
   - 线性代数
-abbrlink: 54489
+cover: https://ooo.0x0.ooo/2025/08/22/OfdsOI.png
 date: 2025-03-24 20:28:06
 ---
 
