--- a/pages/posts/线性代数/行列式.md
+++ b/pages/posts/线性代数/行列式.md
@@ -5,7 +5,7 @@ tags:
   - 线性代数
 categories:
   - 线性代数
-abbrlink: 46546
+cover: https://ooo.0x0.ooo/2025/08/22/Ofdcd1.png
 date: 2025-03-25 15:18:10
 ---
 
