--- a/pages/posts/题解/abc396 题解.md
+++ b/pages/posts/题解/abc396 题解.md
@@ -3,8 +3,8 @@ title: abc-396 题解
 math: true
 categories:
   - 比赛 题解
-abbrlink: 52196
 date: 2025-03-10 01:23:17
+cover: https://ooo.0x0.ooo/2025/08/22/OfdYEF.jpg
 tags:
 ---
 
