--- a/pages/posts/题解/abc397 题解.md
+++ b/pages/posts/题解/abc397 题解.md
@@ -3,8 +3,8 @@ title: abc-397 题解
 math: true
 categories:
   - 比赛 题解
-abbrlink: 1829
 date: 2025-03-17 13:26:10
+cover: https://ooo.0x0.ooo/2025/08/22/OfdVND.jpg
 tags:
 ---
 
